Quotes, lists, etc. for "What is"

--- a/index.html
+++ b/index.html
@@ -74,27 +74,34 @@
 
         <section>
           <section>
-            <h3 style="padding-right: 50%;">What is a...</h3>
-            <h1 style="padding-left: 200px;">JIT Compiler?</h1>
+            <h3 style="text-align: left;">What is a...</h3>
+            <h1 style="text-align: center;">JIT Compiler?</h1>
           </section>
-          <section>
-            <h3 style="text-align: left;">A traditional compiler...</h3>
-            <small>
-              <ul>
-                <li>transforms high-level source code into low-level machine code</li>
-                <li>runs prior to execution as a static compiler</li>
-              </ul>
-            </small>
+          <section style="text-align: left;">
+            <h3 style="text-align: left;">What is a JIT Compiler?</h3>
+            <br>
+            <b>Compiler</b><br>
+            <ul>
+              <li>&rarr; it does code transformations</li>
+              <li>&rarr; typically from high-level source code to<br> low-level machine code</li>
+            </ul>
+            <br>
+            <b>Just-In-Time</b><br>
+            <ul>
+              <li>&rarr; as close as possible to its actual execution</li>
+            </ul>
           </section>
-          <section>
-            <h3 style="text-align: left;">A JIT Compiler...</h3>
-            <small>
-              <ul>
-                <li>transforms high-level source code into low-level machine code</li>
-                <li>runs <b style="color: #c33;">during</b> the execution of a program as a <b style="color: #c33;">runtime compiler</b></li>
-                <li>produces executable code "Just-in-Time"</li>
-              </ul>
-            </small>
+          <section style="text-align: left;">
+            <h3 style="text-align: left;">What people mean with JIT Compiler?</h3>
+            <br>
+            <blockquote cite="http://eli.thegreenplace.net/2013/11/05/how-to-jit-an-introduction">
+              Whenever a program, while running, creates and runs some new executable code 
+              which was not part of the program when it was stored on disk, it’s a JIT.
+              <cite>Eli Bendersky</cite>
+            </blockquote>
+            <br>
+            typically <b style="color: #c33;">during</b> the execution of a program<br>
+            it's a <b style="color: #c33;">runtime compiler</b>
           </section>
         </section>
 
