--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>LLVM-based JIT Compilers</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -118,6 +118,13 @@
             </blockquote>
             <br>
             &rarr; widely used as a synonym for <b style="color: #c33;">Runtime Compiler</b>
+            <br>
+            &rarr; AOT (ahead of time compilation) is the term's opposite using a <b style="color: #c33;">Static Compiler</b>
+          </section>
+          <section style="text-align: left;">
+            <h3>Difference Static vs. Runtime Compiler?</h3>
+            <br>
+            todo
           </section>
         </section>
 
@@ -140,9 +147,11 @@
             <ul>
               <li>&rarr; huge code base:<br>open-source, modern C++</li>
               <li>&rarr; sophisticated requirements:<br>modularity, portability, efficiency</li>
-              <li>&rarr; reusable components</li>
-              <li>&rarr; great development tools!</li>
+              <li>&rarr; components that you might like to use</li>
+              <li>&rarr; great development tools</li>
             </ul>
+            <br>
+            &hellip; and a good craftsman should know his tools!
           </section>
         </section>
 
@@ -195,6 +204,9 @@
             <img data-src="img/emscripten_logo_full.png" width="408" height="111" alt="xxx" class="logo-tr">
             <br><br><br>
             <h3 style="margin: 0px;">Emscripten &mdash; a source-to-source compiler</h3>
+            <a target="_blank"
+               href="https://github.com/kripken/emscripten">
+                     https://github.com/kripken/emscripten</a>
             <ul>
               <li>&rarr; compiles C/C++ to asm.js</li>
               <li>&rarr; examples: Unreal Engine 3, SQLite, Lua VM</li>
@@ -206,55 +218,66 @@
             <img data-src="img/mapd_banner.png" width="200" height="auto" alt="xxx" class="logo-tr">
             <br><br><br><br>
             <h3 style="margin: 0px;">MapD &mdash; a visualization tool for big data</h3>
+            <a target="_blank" 
+              href="https://devblogs.nvidia.com/parallelforall/mapd-massive-throughput-database-queries-llvm-gpus/">
+                    https://devblogs.nvidia.com/parallelforall/mapd-massive-throughput-database-queries-llvm-gpus/</a>
             <ul>
               <li>&rarr; JIT compiles database queries for runtime efficiency</li>
               <li>&rarr; code generation time under 30ms</li>
               <li>&rarr; LLVM IR to target specific CPU and/or GPU</li>
               <li>&rarr; uses system runtime information as compile-time input for queries</li>
-              <li>&rarr; <a target="_blank" href="https://devblogs.nvidia.com/parallelforall/mapd-massive-throughput-database-queries-llvm-gpus/">
-                https://devblogs.nvidia.com/parallelforall/mapd-massive-throughput-database-queries-llvm-gpus/</a></li>
             </ul>
           </section>
           <section class="section-tl">
             <img data-src="img/juce-logo.svg" width="200" height="auto" alt="xxx" class="logo-tr">
             <br><br><br><br><br>
             <h3 style="margin: 0px;">Projucer &mdash; a live coding environment</h3>
+            <a target="_blank" href="https://youtu.be/imkVkRg-geI?t=124">
+                                     https://youtu.be/imkVkRg-geI?t=123</a>
             <ul>
               <li>&rarr; compiles JUCE C++ components on-the-fly and links them into a running executable</li>
               <li>&rarr; rapid development of C++ based UI</li>
-              <li>&rarr; <a target="_blank" href="https://youtu.be/imkVkRg-geI?t=124">
-                https://youtu.be/imkVkRg-geI?t=123</a></li>
             </ul>
           </section>
           <section class="section-tl">
             <img data-src="img/Question_mark.svg" width="auto" height="200" alt="xxx" class="logo-tr">
             <br><br><br>
             <h3 style="margin: 0px;">StatefulJIT &mdash; a research project</h3>
+            <a target="_blank" href="https://github.com/weliveindetail/StatefulJit">
+                                     https://github.com/weliveindetail/StatefulJit</a>
             <ul>
               <li>&rarr; experimental implementation of a minimalistic language</li>
               <li>&rarr; playground to evaluate compiler-based techniques for <a href="https://en.wikipedia.org/wiki/Dynamic_software_updating">dynamic software updating</a></li>
               <li>&rarr; current focus is runtime state transfer</li>
-              <li>&rarr; <a href="https://github.com/weliveindetail/StatefulJit">https://github.com/weliveindetail/StatefulJit</a></li>
             </ul>
           </section>
           <section class="section-tl">
             <h3>Others..</h3>
             <ul>
               <li>
-                <a href="https://github.com/ldc-developers/ldc">LDC</a> (LLVM D Compiler):<br>
-                alpha-state D &rarr; LLVM IR
+                <a href="https://github.com/ldc-developers/ldc">LDC</a>: LLVM D Compiler (alpha-state)
               </li>
               <li>
-                <a href="http://llvm.org/pubs/2010-09-HASKELLSYM-LLVM-GHC.pdf">GHC</a> (Glasgow Haskell Compiler):<br>
-                Haskell &rarr; LLVM IR backend<br>available since GHC 7.0 (2010) and quite stable today
+                <a href="https://www.rust-lang.org/">Rust</a>: systems programming language
               </li>
               <li>
-                <a href="https://bitbucket.org/purelang/pure-lang/wiki/Faust2">FAUST</a> (Functional Audio Stream):<br>
-                used to generate C++, now also compiles DSP &rarr; LLVM IR
+                <a href="https://developer.apple.com/swift/">Swift</a>: Apple's attempt to replace Objective-C
               </li>
               <li>
-                <a href="https://github.com/dotnet/llilc">LLILC</a> (LLVM-based MSIL Compiler):<br>
-                aims to compile .NET's CoreCLR to LLVM IR
+                <a href="http://llvm.org/pubs/2010-09-HASKELLSYM-LLVM-GHC.pdf">GHC</a>: Glasgow Haskell Compiler<br>
+                <!--  (LLVM backend quite stable today) &rarr; LLVM backend added with GHC 7.0 in 2010-->
+              </li>
+              <li>
+                <a href="https://bitbucket.org/purelang/pure-lang/wiki/Faust2">FAUST</a>: Functional Audio Stream
+              </li>
+              <li>
+                <a href="https://github.com/rubinius/rubinius">Rubinius</a>: high-performance env. for running Ruby code
+              </li>
+              <li>
+                <a href="https://github.com/dotnet/llilc">LLILC</a>: aims to compile .NET's CoreCLR to LLVM IR<br>
+              </li>
+              <li>
+                <a href="http://vuo.org/node/31">Vuo</a>: Visual programming environment
               </li>
               <li>
                 and so on...
@@ -262,6 +285,166 @@
             </ul>
           </section>
         </section>
+
+        <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+        <section>
+          <section>
+            <h1 style="text-align: center;">Architecture</h1>
+          </section>
+          <section>
+            3-phase design
+            compiler basics
+          </section>
+          <section>
+            IR and its role
+            * well-specified
+            * not platform specific (but also not necessarily identical on different platforms)
+            * source language neutral
+
+            * compare to GCC on debug info example
+
+            &rarr; IR language reference
+          </section>
+          <section>
+            Optimizer:
+            * IR is the only interface
+            * single passes
+            * PassManager resolves dependencies and optimizes the execution
+
+            &rarr; writing a pass
+          </section>
+          <section>
+            GCC not reusable as library, because it's designed as a monolithic application (no strict separation of frontend/optimizer/backend)
+          </section>
+          <section>
+            JVM and .Net are opaque virtual machines (optimizer - backend not modular)
+          </section>
+          <section>
+            However, from the scientific point of view there is nothing new in LLVM. Three-Phase-Design is well understood and implemented in other experimental compilers like SUIF, but more specific research and not production ready.
+
+            LLVM came at the right time and did the right thing!
+            * 
+            * native programming is back! interest and investing in C++ and COMPILERS grows again since 2010
+            * many new architectures for mobile processors and GPUs
+            * static compilers and runtime compilers in one framework
+            * high demand for build tools, which benefit a lot from LLVM modularity
+          </section>
+        </section>
+
+        <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+        <section>
+          <section>
+            <h1 style="text-align: center;">Conceptual Advantages</h1>
+          </section>
+          <section>
+            reuse the libraries in your project: demo HowToJIT example in sublime
+            compiler basic: compile-time vs. runtime! interesting and challenging!
+          </section>
+          <section>
+            Link-Time Optimization
+            * no expensive serialization (naturally not required)
+            * across different source languages
+          </section>
+          <section>
+            Install-Time Optimization
+            * delay codegen to installation
+            * match instruction choice, scheduling to the specific machine's hardware
+          </section>
+          <section>
+            Unit Testing the Optimizer
+
+            * traditional approaches: 
+            ** run .c file through compiler to test that it doesn't crash (GCC)
+            ** compile huge programs with nightly builds and run automated user-interactions (MSVC)
+
+            * textual LLVM IR &amp; modular optimizer:
+            ** e.g. test constant folding pass individually
+            ** verify that it actually performed!
+            ** not possible with the c file appraoch, as front-ends may optimize constant folding too
+          </section>
+        </section>
+
+        <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+        <section>
+          <section>
+            <h1 style="text-align: center;">Learning from LLVM</h1>
+          </section>
+          <section class="section-tl">
+            <blockquote cite="http://www.aosabook.org/en/llvm.html">
+              None of the subsystems in LLVM are really good until they have been rewritten at least once.
+            </blockquote>
+            <blockquote cite="http://www.aosabook.org/en/llvm.html">
+              After all, the goal isn't to be perfect, it is to keep getting better over time.
+              <cite>Chris Lattner</cite>
+            </blockquote>
+          </section>
+          <section class="section-tl">
+            LLVM Coding Standards  "you only pay for what you use" approach
+            http://llvm.org/docs/CodingStandards.html
+
+            * good structure great reasoning
+            * few style conventions like naming and bracing
+          </section>
+            Hand-rolled RTTI
+            http://llvm.org/docs/HowToSetUpLLVMStyleRTTI.html
+
+            * more efficient and flexible
+            * fully explicit &rarr; use only where necessary
+            * no implicit limitations
+          <section class="section-tl">
+            Bugpoint
+            http://llvm.org/docs/Bugpoint.html
+
+            * automatically reduces the amount of code necessary to reproduce a bug
+            * trade off programmer time for computer time in the compiler-debugging process
+          </section>
+        </section>
+
+        <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+        <section>
+          <section>
+            <h1 style="text-align: center;">Setup and tutorials</h1>
+          </section>
+          <section class="section-tl">
+            setup llvm (build and install)
+            mac and simple: brew install llvm
+            others: http://llvm.org/docs/CMake.html
+          </section>
+          <section class="section-tl">
+            guided C++ coding &rarr; easy
+            learn how to write a parser to translate your representation to LLVM
+            http://llvm.org/docs/tutorial/index.html
+          </section>
+          <section class="section-tl">
+            explorative C++ coding &rarr; medium
+            start from scratch with the HowToJIT example
+            !! make github repo !!
+          </section>
+          <section class="section-tl">
+            requires some compiler and IR knowhow &rarr; advanced
+            learn how to write an optimization pass
+            http://llvm.org/docs/tutorial/index.html
+
+            * useful for custom optimizations
+            * useful for binary instrumentation
+          </section>
+        </section>
+
+        <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+        <section>
+          <section>
+            <h1 style="text-align: center;">Experimenting with a JIT Compiler</h1>
+          </section>
+          <section class="section-tl">
+            setup llvm (build and install)
+            mac and simple: brew install llvm
+            others: http://llvm.org/docs/CMake.html
+          </section>
 
         <!-- ------------------------------------------------------------------------------------------------------------------ -->
 
